--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "solid-js": "^1.8.7"
+    "clsx": "^2.1.0",
+    "solid-js": "^1.8.7",
+    "solid-motionone": "^1.0.0",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-solid": "^2.8.0"
   }
