--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-plugin-solid": "^0.13.1",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-solid": "^2.8.0"
   }
 }
